# kayteide

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  choicemode.cpp  choicemode.ui  cppsyntaxhighlighter.cpp  create_dmg.sh  delphisyntaxhighlighter.cpp  delphisyntaxhighlighter.h  downloadprogressdialog.cpp  editortabwidget.cpp  editortabwidget.h  generaltab.h  kaytesyntaxhighlighter.h  linenumberarea.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.rtf  pascalsyntaxhighlighter.cpp  pascalsyntaxhighlighter.h  tabdialog.h  teste.cpp  vbsyntaxhighlighter.h
components/: InputBox.pas  Makefile  components  components.lpi  components.lpr  components.lps  forms.pas  listview.pas  messagebox.pas
components/backup/: components.lpr  components.lps
components/delphi/: WinAPIWindow.pas
components/lib/aarch64-darwin/: InputBox.ppu  components.compiled  forms.ppu  listview.ppu  messagebox.ppu
i18n/: en.json
plugins/git/: CMakeCache.txt  CMakeLists.txt  GitClientPlugin.cpp  GitClientPlugin.h  IGitClient.h
plugins/pas2dox/: CMakeLists.txt  Makefile  globals.h  lex.yy.c  pas2dox.cpp  pas2dox.l  pasdoxflexlexer.h
plugins/project/: CMakeLists.txt  main.cpp  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui
plugins/serial/: CMakeLists.txt  console.cpp  console.h  settingsdialog.cpp  settingsdialog.h  terminal.html
resources/: Info.plist  es.json  i18n.qrc  icons.qrc  kayte.icns  kayteide.desktop  main_resources.qrc
src/: applicationstab.h  choicemode.h  cppsyntaxhighlighter.h  delphisyntaxhighlighter.cpp  downloadprogressdialog.cpp  downloadprogressdialog.h  downloadprogressdialog.ui  editortabwidget.cpp  editortabwidget.h  kaytesyntaxhighlighter.cpp  keyboard.cpp  keyboard.h  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myjsontranslator.cpp  myjsontranslator.h  permissionstab.h  vbsyntaxhighlighter.cpp
src/threads/: posixthread.cpp  posixthread.h  threadmanager.cpp  threadmanager.h
update/: CMakeLists.txt
update/resources/: kayte.icns
